--- a/src/components/NewsArticle/NewsArticle.module.css
+++ b/src/components/NewsArticle/NewsArticle.module.css
@@ -1,8 +1,86 @@
 .title {
-    font-family: 'Courier New', Courier, monospace;
-    color: blueviolet;
+    padding: 16px 24px;
+    text-align: left;  
+    background-color: #F6F1FF;
+    border-radius: 32px;    
 }
 
-.list {
-    list-style: none;
+.article {
+    border-radius: 16px;
+    border: 2px solid #9285A7;
+    max-width: 320px;
+    height: 100%;
+    overflow: hidden;
+    background-color: #9285A7;
+    position: relative;
+    /* box-shadow: 0px 4px 24px 5px rgba(114, 114, 114, 0.15); */
+    top: 0;
+    transition: top .4s ease-in-out, box-shadow .4s ease-in-out;
 }
+
+.article:hover {
+    cursor: pointer;
+    box-shadow: 0px 8px 36px 10px rgba(114, 114, 114, 0.15);
+    border-radius: 16px;
+    top: -20px;
+    transition: top .4s ease-in-out, box-shadow .4s ease-in-out;
+} 
+
+.article:hover .svgBorder {
+    fill: #6f03ff;
+}
+
+.article:hover .svgImage {
+    bottom: 0;
+    transition: bottom .6s ease-in-out;
+}
+
+.svgImage {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    z-index: 1;
+    bottom: -10px;
+    transition: bottom .1s ease-in-out;
+}
+
+.svgBorder {
+    fill: #984aff;
+}
+
+.svgBackground {
+    fill: #F6F1FF;
+}
+
+.svgBackgroundImg {
+    fill: #9285A7;
+}
+
+/* .imagecontainer {
+    background: linear-gradient(0deg, rgb(10, 35, 67) 0.12%, rgba(10, 35, 67, 0.5) 55.22%, rgba(10, 35, 67, 0.16) 74.45%, rgba(10, 35, 67, 0) 95.2%);
+    max-height: 200px;
+} */
+
+/* img {
+    object-fit: cover;
+} */
+
+svg {
+    overflow: hidden;
+    width: 100%;
+}
+
+.svgImage img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 99%;
+    z-index: -1;
+    width: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: center;
+    object-position: center;
+}
+
+
