--- a/src/components/NewsArticle/NewsArticle.module.css
+++ b/src/components/NewsArticle/NewsArticle.module.css
@@ -1,59 +1,80 @@
 .title {
-    padding: 16px 24px;
-    text-align: left;  
-    background-color: #F6F1FF;
-    border-radius: 32px;    
+  padding: 16px 24px;
+  text-align: left;
+  background-color: #f6f1ff;
+  border-radius: 32px;
+  margin-top: -30px;
+  z-index: 2;
+  position: relative;
+}
+
+.article a {
+    text-decoration: none;
+}
+
+.article:hover a {
+    text-decoration: underline;
 }
 
 .article {
-    border-radius: 16px;
-    border: 2px solid #9285A7;
+  border-radius: 16px;
+  border: 2px solid #9285a7;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: #9285a7;
+  position: relative;
+  /* box-shadow: 0px 4px 24px 5px rgba(114, 114, 114, 0.15); */
+  top: 0;
+  transition: top 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
+}
+
+.article:focus-within {
+    border: 4px solid yellow;
+}
+
+@media screen and (min-width: 700px) {
+  .article {
     max-width: 320px;
-    height: 100%;
-    overflow: hidden;
-    background-color: #9285A7;
-    position: relative;
-    /* box-shadow: 0px 4px 24px 5px rgba(114, 114, 114, 0.15); */
-    top: 0;
-    transition: top .4s ease-in-out, box-shadow .4s ease-in-out;
+  }
 }
 
 .article:hover {
-    cursor: pointer;
-    box-shadow: 0px 8px 36px 10px rgba(114, 114, 114, 0.15);
-    border-radius: 16px;
-    top: -20px;
-    transition: top .4s ease-in-out, box-shadow .4s ease-in-out;
-} 
+  cursor: pointer;
+  box-shadow: 0px 8px 36px 10px rgba(114, 114, 114, 0.15);
+  border-radius: 16px;
+  top: -20px;
+  transition: top 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
+}
 
 .article:hover .svgBorder {
-    fill: #6f03ff;
+  fill: #6f03ff;
 }
 
 .article:hover .svgImage {
-    bottom: 0;
-    transition: bottom .6s ease-in-out;
+  bottom: 20px;
+  transition: bottom 0.6s ease-in-out;
 }
 
 .svgImage {
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-    z-index: 1;
-    bottom: -10px;
-    transition: bottom .1s ease-in-out;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  z-index: 1;
+  bottom: -10px;
+  transition: bottom 0.2s ease-in-out;
 }
 
 .svgBorder {
-    fill: #984aff;
+  fill: #984aff;
 }
 
 .svgBackground {
-    fill: #F6F1FF;
+  fill: #f6f1ff;
 }
 
 .svgBackgroundImg {
-    fill: #9285A7;
+  fill: #9285a7;
 }
 
 /* .imagecontainer {
@@ -66,21 +87,19 @@
 } */
 
 svg {
-    overflow: hidden;
-    width: 100%;
+  overflow: hidden;
+  width: 100%;
 }
 
 .svgImage img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 99%;
-    z-index: -1;
-    width: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
-    -o-object-position: center;
-    object-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 99%;
+  z-index: -1;
+  width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: center;
+  object-position: center;
 }
-
-
