--- a/src/components/Portal/Portal.module.css
+++ b/src/components/Portal/Portal.module.css
@@ -11,6 +11,13 @@
     gap: 24px;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: center;
     margin: 0 auto;
     margin-top: 42px;
+}
+
+@media screen and (min-width: 700px) {
+    .grid {
+        justify-content: left;
+    }
 }
