--- a/src/components/NewsArticle/NewsArticle.module.css
+++ b/src/components/NewsArticle/NewsArticle.module.css
@@ -6,6 +6,7 @@
   margin-top: -30px;
   z-index: 2;
   position: relative;
+  border: 4px solid #f6f1ff;
 }
 
 .article a {
@@ -29,8 +30,13 @@
   transition: top 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
 }
 
-.article:focus-within {
-    border: 4px solid yellow;
+.article:focus-within .title {
+    border: 4px solid #984aff;
+    text-decoration: none;
+}
+
+.article:focus-within a:focus {
+    outline: none;
 }
 
 @media screen and (min-width: 700px) {
