--- a/src/components/NewsArticle/NewsArticle.module.css
+++ b/src/components/NewsArticle/NewsArticle.module.css
@@ -23,7 +23,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: #9285a7;
+  background-color: var(--main-bg-color);
   position: relative;
   /* box-shadow: 0px 4px 24px 5px rgba(114, 114, 114, 0.15); */
   top: 0;
