--- a/src/components/NewsArticle/NewsArticle.module.css
+++ b/src/components/NewsArticle/NewsArticle.module.css
@@ -3,29 +3,20 @@
   text-align: left;
   background-color: #f6f1ff;
   border-radius: 32px;
-  margin-top: -30px;
   z-index: 2;
   position: relative;
+  margin-top: 0;
   border: 4px solid #f6f1ff;
 }
 
-.article a {
-    text-decoration: none;
-}
-
-.article:hover a {
-    text-decoration: underline;
-}
-
 .article {
-  border-radius: 16px;
+  border-radius: 32px;
   border: 2px solid #9285a7;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: var(--main-bg-color);
+  background-color: #f6f1ff;
   position: relative;
-  /* box-shadow: 0px 4px 24px 5px rgba(114, 114, 114, 0.15); */
   top: 0;
   transition: top 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
 }
@@ -43,69 +34,4 @@
   .article {
     max-width: 320px;
   }
-}
-
-.article:hover {
-  cursor: pointer;
-  box-shadow: 0px 8px 36px 10px rgba(114, 114, 114, 0.15);
-  border-radius: 16px;
-  top: -20px;
-  transition: top 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
-}
-
-.article:hover .svgBorder {
-  fill: #6f03ff;
-}
-
-.article:hover .svgImage {
-  bottom: 20px;
-  transition: bottom 0.6s ease-in-out;
-}
-
-.svgImage {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  z-index: 1;
-  bottom: -10px;
-  transition: bottom 0.2s ease-in-out;
-}
-
-.svgBorder {
-  fill: #984aff;
-}
-
-.svgBackground {
-  fill: #f6f1ff;
-}
-
-.svgBackgroundImg {
-  fill: #9285a7;
-}
-
-/* .imagecontainer {
-    background: linear-gradient(0deg, rgb(10, 35, 67) 0.12%, rgba(10, 35, 67, 0.5) 55.22%, rgba(10, 35, 67, 0.16) 74.45%, rgba(10, 35, 67, 0) 95.2%);
-    max-height: 200px;
-} */
-
-/* img {
-    object-fit: cover;
-} */
-
-svg {
-  overflow: hidden;
-  width: 100%;
-}
-
-.svgImage img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 99%;
-  z-index: -1;
-  width: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-  -o-object-position: center;
-  object-position: center;
 }
