--- a/src/components/NewsArticle/NewsArticle.module.css
+++ b/src/components/NewsArticle/NewsArticle.module.css
@@ -1,37 +1,55 @@
-.title {
-  padding: 16px 24px;
-  text-align: left;
-  background-color: #f6f1ff;
-  border-radius: 32px;
-  z-index: 2;
-  position: relative;
-  margin-top: 0;
-  border: 4px solid #f6f1ff;
-}
-
 .article {
   border-radius: 32px;
   border: 2px solid #9285a7;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: #f6f1ff;
+  /* background-color: #f6f1ff; */
   position: relative;
   top: 0;
   transition: top 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
-}
-
-.article:focus-within .title {
-    border: 4px solid #984aff;
-    text-decoration: none;
-}
-
-.article:focus-within a:focus {
-    outline: none;
+  display: flex;
+  flex-direction: row;
 }
 
 @media screen and (min-width: 700px) {
   .article {
-    max-width: 320px;
+    /* max-width: 320px; */
   }
+}
+
+.imgWrapper {
+  
+}
+
+.imgWrapper > * {
+  width: 350px;
+}
+
+.textWrapper {
+  width: 50%;
+  background-color: #f6f1ff;
+  padding: 48px;
+  border-radius: 32px;
+  z-index: 2;
+  position: relative;
+  flex-basis: 100%;
+}
+
+.title {
+  padding: 16px 0;
+  text-align: left;
+  margin-top: 0;
+  font-size: 36px;
+}
+
+.markup {
+  font-size: 22px;
+  line-height: 24px;
+  max-height: 300px;
+  overflow: hidden;
+}
+
+.markup a {
+  color: #6f03ff;
 }
