--- a/src/components/NewsArticle/NewsArticle.module.css
+++ b/src/components/NewsArticle/NewsArticle.module.css
@@ -1,10 +1,10 @@
 .article {
-  border-radius: 32px;
+  border-radius: 24px;
   border: 2px solid #9285a7;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  /* background-color: #f6f1ff; */
+  background-color: #f6f1ff;
   position: relative;
   top: 0;
   transition: top 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
@@ -14,7 +14,6 @@
 
 @media screen and (min-width: 700px) {
   .article {
-    /* max-width: 320px; */
     flex-direction: row;
   }
 
@@ -56,16 +55,36 @@
     font-size: 36px;
     line-height: 36px;
   }
-
 }
 
 .markup {
   font-size: 22px;
   line-height: 24px;
-  max-height: 300px;
+  max-height: 230px;
   overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+  -webkit-mask-image: linear-gradient(to bottom, black 90%, transparent 100%);
+  mask-image: linear-gradient(to bottom, black 90%, transparent 100%);
 }
 
 .markup a {
   color: #6f03ff;
+}
+
+.expand {
+  max-height: 3000px;
+  height: auto;
+  -webkit-mask-image: none;
+  mask-image: none;
+}
+
+.readMore {
+  background-color: #f6f1ff;
+  border: 1px solid #6f03ff;
+  border-radius: 16px;
+  color:#6f03ff;
+  font-size: 24px;
+  padding: 8px 16px;
+  margin: 24px 0 16px 0;
+  cursor: pointer;
 }
