--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -18,23 +18,30 @@
   font-size: 24px;
   text-align: left;
   margin-top: 8px;
+  font-weight: 400;
+}
+
+@media screen and (min-width: 700px) {
+  .title {
+    text-align: center;
+  }
 }
 
 .heading {
   width: 100%;
-  color: rgb(239, 224, 255);
-  align-self: flex-start;
-  display: flex;
-  font-size: 32px;
+  color: rgb(243, 233, 252);
+  font-size: 24px;
   text-align: left;
   max-width: 900px;
-  padding: 8px;
+  padding: 0;
+  margin-bottom: 0;
 }
 
 @media screen and (min-width: 700px) {
   .heading {
     font-size: 64px;
     margin: 0 auto;
+    text-align: center;
   }
 }
 
@@ -78,7 +85,7 @@
   color: #2cff5a;
   font-weight: bold;
   border-radius: 16px;
-  border: 1px solid #c5b1e3;
+  border: 1px solid #321e52;
   flex: 0 0 70%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -88,10 +95,13 @@
   text-align: left;
   box-shadow: 0px 8px 24px 5px rgba(18, 18, 18, 0.27);
   scroll-snap-align: center;
+  top: 0;
+  position: relative;
+  transition: top 0.3s ease-in-out;
 }
 
 .button span {
-    background-color: #1f1136;
+  background-color: #1f1136;
 }
 
 @media screen and (min-width: 700px) {
@@ -100,12 +110,17 @@
     height: 200px;
     max-width: 200px;
   }
+
+  .button:hover {
+    top: -6px;
+    transition: top 0.6s ease-in-out border-radius 0.5s ease-in-out;
+  }
 }
 
 .button:hover {
   background-color: #d5c2ff;
   border: 1px solid #6f03ff;
   border-radius: 8px;
-  transition: border-radius 0.5s ease-in-out;
+  position: relative;
   font-weight: bold;
 }
