--- a/src/components/NewsArticle/NewsArticle.module.css
+++ b/src/components/NewsArticle/NewsArticle.module.css
@@ -1,15 +1,13 @@
 .article {
-  border-radius: 24px;
-  border: 2px solid #9285a7;
+  border-radius: 18px;
   width: 100%;
   height: 100%;
   overflow: hidden;
   background-color: #f6f1ff;
   position: relative;
-  top: 0;
-  transition: top 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
   display: flex;
   flex-direction: column;
+  box-shadow: 0px 8px 24px 5px rgba(18, 18, 18, 0.27);
 }
 
 @media screen and (min-width: 700px) {
@@ -60,9 +58,15 @@
 .markup {
   font-size: 22px;
   line-height: 24px;
-  max-height: 230px;
+  max-height: 240px;
   overflow: hidden;
   transition: max-height 0.3s ease-in-out;
+}
+
+@media screen and (min-width: 700px) {
+  .markup {
+    max-height: 140px;
+  }
 }
 
 .markup a {
@@ -90,4 +94,10 @@
   padding: 8px 16px;
   margin: 24px 0 16px 0;
   cursor: pointer;
+  transition: border-radius 0.3s ease-in-out;
+}
+
+.readMore:hover {
+  border-radius: 4px;
+  transition: border-radius 0.3s ease-in-out;
 }
