--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--main-bg-color);
+  background-color: #321e52;
   width: 100%;
   overflow-x: hidden;
 }
+
+@media screen and (min-width: 700px) {
+  .body {
+    background-color: var(--main-bg-color);
+  }
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
