--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -67,15 +67,17 @@
     min-width: 200px;
     gap: 24px;
     margin: 24px auto;
-    overflow-x: hidden;
-    overflow-y: hidden;
     border-radius: 16px;
     background-color: #321e52;
+  }
+
+  .wrapper::-webkit-scrollbar {
+    display: none;
   }
 }
 
 .button {
-  cursor: grab;
+  cursor: pointer;
   height: 100%;
   min-height: 160px;
   width: 50px;
@@ -106,7 +108,7 @@
 
 @media screen and (min-width: 700px) {
   .button {
-    cursor: pointer;
+    cursor: grab;
     height: 200px;
     max-width: 200px;
   }
